<resources>
    <string name="app_name">IntentShare</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="share_chooser_dialog">选择框</string>
    <string name="share_to_sina">新浪微博</string>

    <string name="share_to_weixin">微信好友</string>
    <string name="btn_share_to_weixin_circle">微信朋友圈</string>

    <string name="share_to_qq">QQ好友</string>
    <string name="share_to_qq_zone">QQ空间</string>
    <string name="share_to_email">邮件</string>
    <string name="share_to_sms">短信</string>

</resources>
