<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_share_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_chooser_dialog" />
    <Button
        android:id="@+id/btn_share_to_sina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_sina" />
    <Button
        android:id="@+id/btn_share_to_weixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_weixin" />
    <Button
        android:id="@+id/btn_share_to_weixin_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_share_to_weixin_circle" />
    <Button
        android:id="@+id/btn_share_to_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_qq" />
    <Button
        android:id="@+id/btn_share_to_qq_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_qq_zone" />
    <Button
        android:id="@+id/btn_share_to_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_sms" />
    <Button
        android:id="@+id/btn_share_to_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_email" />
</LinearLayout>
